examples/invalid/semantics/redefine_std.rs
fn main() {
    let i32: i64 = 0;
}